<resources>
    <string name="app_name">Calculator</string>
    <string name="result">2122</string>
    <string name="equation">376+74*24</string>
    <string name="c">C</string>
    <string name="plus_minus">+ / -</string>
    <string name="percentage">%</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="cancel">x</string>
    <string name="equal">=</string>
</resources>